Give the option to remove the images, show skill weapons (e.g. forward observer) or equipments (e.g. Medikit)